# hippopt

./: .gitignore  CITATIONS.bib  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci_cd.yml  style.yml
src/hippopt/: __init__.py  common.py
src/hippopt/base/: __init__.py  continuous_variable.py  dynamics.py  implicit_single_step_integrator.py  multiple_shooting_solver.py  opti_callback.py  opti_solver.py  optimal_control_problem.py  optimal_control_solver.py  optimization_object.py  optimization_problem.py  optimization_solver.py  parameter.py  problem.py  single_step_integrator.py  solver.py  variable.py
src/hippopt/integrators/: __init__.py  forward_euler.py  implicit_trapezoid.py
src/hippopt/robot_planning/: __init__.py
src/hippopt/robot_planning/dynamics/: __init__.py  centroidal.py
src/hippopt/robot_planning/expressions/: __init__.py  centroidal.py  complementarity.py  contacts.py  kinematics.py  quaternion.py
src/hippopt/robot_planning/utilities/: .gitignore  __init__.py  foot_contact_state_plotter.py  humanoid_state_visualizer.py  interpolators.py  planar_terrain.py  quaternion.py  smooth_terrain.py  terrain_descriptor.py  terrain_sum.py  terrain_visualizer.py
src/hippopt/robot_planning/variables/: __init__.py  contacts.py  floating_base.py  humanoid.py
src/hippopt/turnkey_planners/: humanoid_walking_flat_ground.py
src/hippopt/turnkey_planners/humanoid_kinodynamic/: .gitignore  main.py  main_periodic_step.py  main_periodic_step_parametric.py  main_periodic_step_sensitivity.py  main_single_jump_on_flat_ground.py  main_single_step_flat_ground.py  main_walking_on_ramp.py  main_walking_on_stairs.py  planner.py  settings.py  variables.py
src/hippopt/turnkey_planners/humanoid_pose_finder/: .gitignore  main.py  main_complex_poses.py  main_sensitivity.py  planner.py
src/hippopt/turnkey_planners/humanoid_walking_flat_ground/: main.py  planner.py
test/: test_base.py  test_integrators.py  test_multiple_shooting.py  test_opti_generate_objects.py  test_optimization_object.py  test_optimization_objects.py  test_optimization_problem.py  test_planar_terrain.py
