[metadata]
name = hippopt
description = HIghly Pythonized Planning and OPTimization framework
long_description = file: README.md
long_description_content_type = text/markdown
author = Stefano Dafarra
author_email = stefano.dafarra@iit.it
license = BSD-2
license_files = LICENSE
platforms = any
url = https://github.com/ami-iit/hippopt

project_urls =
    Changelog = https://github.com/ami-iit/hippopt/releases
    Source = https://github.com/ami-iit/hippopt
    Tracker = https://github.com/ami-iit/hippopt/issues

keywords =
    trajectory
    optimization
    robots
    humanoids
    quadrupeds
    kinematics
    dynamics
    contacts

classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Robot Framework
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Games/Entertainment :: Simulation

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.10
install_requires =
    casadi
    numpy

[options.extras_require]
style =
    black
    isort
testing=
    pytest
robot_planning=
    liecasadi
    adam-robotics
turnkey_planners=
    idyntree
visualization=
    ffmpeg-python
    idyntree
    meshcat-python
    matplotlib
all =
    %(style)s
    %(testing)s
    %(robot_planning)s
    %(turnkey_planners)s
    %(visualization)s

[options.packages.find]
where = src
